Rewrite cli